--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "main": "index.js",
-  "name": "all-around-helper",
-  "description": "A Discord bot for Lobotomy Corporation and Library of Ruina",
-  "version": "1.0.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "npm run build && node dist/index.js",
-    "watch": "tsc -p tsconfig.json -w"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Errleng/all-around-helper.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Errleng/all-around-helper/issues"
-  },
-  "homepage": "https://github.com/Errleng/all-around-helper#readme",
-  "dependencies": {
-    "@discordjs/builders": "^0.12.0",
-    "@discordjs/rest": "^0.3.0",
-    "discord-api-types": "^0.26.1",
-    "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "eslint": "^8.8.0",
-    "typescript": "^4.5.5"
-  }
+    "main": "index.js",
+    "name": "all-around-helper",
+    "description": "A Discord bot for Lobotomy Corporation and Library of Ruina",
+    "version": "1.0.0",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc",
+        "start": "npm run build && node dist/index.js",
+        "deploy-commands": "npm run build && node dist/deploy-commands.js",
+        "watch": "tsc -p tsconfig.json -w"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Errleng/all-around-helper.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Errleng/all-around-helper/issues"
+    },
+    "homepage": "https://github.com/Errleng/all-around-helper#readme",
+    "dependencies": {
+        "@discordjs/builders": "^0.12.0",
+        "@discordjs/rest": "^0.3.0",
+        "discord-api-types": "^0.26.1",
+        "discord.js": "^13.6.0",
+        "dotenv": "^16.0.0"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.10.2",
+        "@typescript-eslint/parser": "^5.10.2",
+        "eslint": "^8.8.0",
+        "typescript": "^4.5.5"
+    }
 }
