--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
         "@discordjs/rest": "^0.3.0",
         "discord-api-types": "^0.26.1",
         "discord.js": "^13.6.0",
-        "dotenv": "^16.0.0"
+        "dotenv": "^16.0.0",
+        "jsdom": "^19.0.0",
+        "node-fetch": "^2.6.7"
     },
     "devDependencies": {
+        "@types/jsdom": "^16.2.14",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
         "eslint": "^8.8.0",
