--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
         "discord-api-types": "^0.26.1",
         "discord.js": "^13.6.0",
         "dotenv": "^16.0.0",
+        "dotenv-parse-variables": "^2.0.0",
         "jsdom": "^19.0.0",
         "node-fetch": "^2.6.7"
     },
     "devDependencies": {
+        "@types/dotenv-parse-variables": "^2.0.1",
         "@types/jsdom": "^16.2.14",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
