--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
         "dotenv": "^16.0.0",
         "dotenv-parse-variables": "^2.0.0",
         "jsdom": "^19.0.0",
-        "node-fetch": "^2.6.7"
+        "node-fetch": "^2.6.7",
+        "pg": "^8.7.3"
     },
     "devDependencies": {
         "@types/dotenv-parse-variables": "^2.0.1",
         "@types/jsdom": "^16.2.14",
+        "@types/pg": "^8.6.4",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
         "eslint": "^8.8.0",
