--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "discord.js": "^13.6.0",
         "dotenv": "^16.0.0",
         "dotenv-parse-variables": "^2.0.0",
+        "fast-xml-parser": "^4.0.2",
         "jsdom": "^19.0.0",
         "node-fetch": "^2.6.7",
         "pg": "^8.7.3"
