--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
         "dotenv": "^16.0.0",
         "dotenv-parse-variables": "^2.0.0",
         "fast-xml-parser": "^4.0.2",
+        "glob": "^8.0.3",
         "jsdom": "^19.0.0",
         "node-fetch": "^2.6.7",
         "pg": "^8.7.3"
     },
     "devDependencies": {
         "@types/dotenv-parse-variables": "^2.0.1",
+        "@types/glob": "^8.0.0",
         "@types/jsdom": "^16.2.14",
         "@types/pg": "^8.6.4",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
