--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dependencies": {
         "@discordjs/builders": "^0.12.0",
         "@discordjs/rest": "^0.3.0",
-        "canvas": "^2.9.1",
+        "@discordjs/voice": "^0.11.0",
+        "canvas": "^2.10.1",
         "discord-api-types": "^0.26.1",
         "discord.js": "^13.7.0",
         "dotenv": "^16.0.0",
@@ -32,6 +33,7 @@
         "fast-xml-parser": "^4.0.2",
         "glob": "^8.0.3",
         "jsdom": "^19.0.0",
+        "libsodium-wrappers": "^0.7.10",
         "node-fetch": "^2.6.7",
         "pg": "^8.7.3"
     },
