--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
         "@discordjs/opus": "^0.8.0",
         "@discordjs/rest": "^0.3.0",
         "@discordjs/voice": "^0.11.0",
+        "canvas": "^2.10.2",
         "discord-api-types": "^0.26.1",
         "discord.js": "^13.7.0",
         "dotenv": "^16.0.0",
         "dotenv-parse-variables": "^2.0.0",
+        "fakeyou.js": "^1.1.1",
         "fast-xml-parser": "^4.0.2",
         "glob": "^8.0.3",
+        "google-tts-api": "^2.0.2",
         "jsdom": "^19.0.0",
         "libsodium-wrappers": "^0.7.10",
         "node-fetch": "^2.6.7",
