--- a/package.json
+++ b/package.json
@@ -22,13 +22,10 @@
     },
     "homepage": "https://github.com/Errleng/all-around-helper#readme",
     "dependencies": {
-        "@discordjs/builders": "^0.12.0",
         "@discordjs/opus": "^0.8.0",
-        "@discordjs/rest": "^0.3.0",
         "@discordjs/voice": "^0.11.0",
-        "canvas": "^2.10.2",
-        "discord-api-types": "^0.26.1",
-        "discord.js": "^13.7.0",
+        "canvas": "^2.11.2",
+        "discord.js": "^14.9.0",
         "dotenv": "^16.0.0",
         "dotenv-parse-variables": "^2.0.0",
         "fakeyou.js": "^1.1.1",
@@ -46,6 +43,7 @@
         "@types/dotenv-parse-variables": "^2.0.1",
         "@types/glob": "^8.0.0",
         "@types/jsdom": "^16.2.14",
+        "@types/node-fetch": "^2.6.3",
         "@types/pg": "^8.6.4",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
