--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "libsodium-wrappers": "^0.7.10",
         "node-fetch": "^2.6.7",
         "pg": "^8.7.3",
+        "pos": "^0.4.2",
+        "wink-eng-lite-model": "https://github.com/winkjs/wink-eng-lite-model/releases/download/1.3.1/wink-eng-lite-model-1.3.1.tgz",
         "ytdl-core": "^4.11.2",
         "ytsr": "^3.8.4"
     },
