--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@discordjs/opus": "^0.9.0",
         "@discordjs/voice": "^0.16.0",
+        "@distube/ytdl-core": "^4.16.4",
         "canvas": "^2.11.2",
         "discord.js": "^14.9.0",
         "dotenv": "^16.0.0",
@@ -38,7 +39,6 @@
         "pg": "^8.7.3",
         "pos": "^0.4.2",
         "wink-eng-lite-model": "https://github.com/winkjs/wink-eng-lite-model/releases/download/1.3.1/wink-eng-lite-model-1.3.1.tgz",
-        "ytdl-core": "^4.11.2",
         "ytsr": "^3.8.4"
     },
     "devDependencies": {
@@ -50,6 +50,6 @@
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
         "eslint": "^8.8.0",
-        "typescript": "^4.5.5"
+        "typescript": "^5.5.3"
     }
 }
