--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
         "eslint": "^8.8.0",
+        "prettier": "^3.5.2",
         "typescript": "^5.5.3"
     }
 }
